--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Disaster Management</title>
+    <title>r/wallstreetbets Hedge Fund Management</title>
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,8 +30,8 @@
     <script src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
     <!-- <script src="src/main.js"></script> -->
 
-    <script src="src/snake.js"></script>
     <script src="src/util.js"></script>
+    <script src="src/main.js"></script>
     <script src="src/game.js" defer></script>
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
